# GitHub-calculator

./: CMakeLists.txt  README.md
src/: calculator.cpp  calculator.h  error.cpp  error.h  exception.cpp  main.cpp  mathfuns.cpp  mathfuns.h  stack.h  unittest.cpp  unittest.h
